--- a/BlogTGP/packages.config
+++ b/BlogTGP/packages.config
@@ -38,6 +38,8 @@
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Owin.Security.Providers" version="1.26" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="Sendgrid" version="6.3.4" targetFramework="net452" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net452" />
